working multi µs,monodb version (with "blank" project) - synchro faster but still slow

--- a/default_ms.env
+++ b/default_ms.env
@@ -9,8 +9,10 @@ FILESTORE_HOST=filestore
 CLSI_HOST=clsi
 REALTIME_HOST=real-time
 CONTACTS_HOST=contacts
+NOTIFICATIONS_HOST=notifications
 
 WEB_API_HOST=web
+WEB_HOST=web
 WEB_API_USER=sharelatex
-WEB_API_PASSWORD=sharelatex
-
+WEB_API_PASSWORD=password
+WEBPACK_HOST=web
