better sync between users (2 seconds max), need to lower timeout

--- a/docker-compose_ms.yml
+++ b/docker-compose_ms.yml
@@ -196,6 +196,8 @@ services:
             MONGO_HOST: mongo
             LISTEN_ADDRESS: 0.0.0.0
             SESSION_SECRET: "secret-please-change"
+            CONTINUAL_PUBSUB_TRAFFIC: "true"
+            PUBLISH_ON_INDIVIDUAL_CHANNELS: "true"
 
     document-updater:
         restart: always
